# React-Automation-Studio

./: .gitignore  README.md  docker-compose-dev-styleguide-dev.yml  docker-compose-dev.yml  docker-compose.yml
ReactApp/: .eslintrc  index.html  package.json  pnpm-lock.yaml  vite.config.js
ReactApp/src/: AppRoutes.jsx  LogIn.js
ReactApp/src/components/AlarmHandler/: EnableDialog.jsx  ScheduleDialog.jsx
ReactApp/src/components/ArchiverDataViewer/: ArchiverDataViewer.jsx
ReactApp/src/components/AreaDetector/: AreaDetector.jsx  Attributes.jsx  Buffers.jsx  GraphHeatmap.jsx  Plugins.jsx  PluginsMore.jsx  ReadOut.jsx  Setup.jsx  Shutter.jsx
ReactApp/src/components/BaseComponents/: BitIndicators.jsx  Gauge.jsx  ProgressBar.jsx
ReactApp/src/components/SettingsPages/: Probe.jsx
ReactApp/src/components/SvgBeamlineComponents/: BendingMagnet.jsx  FC.jsx  Harp.jsx  QuadrapoleMagnet.jsx  SlitXY.jsx  SteererXYMagnet.jsx  SteererYMagnet.jsx
ReactApp/src/components/SystemComponents/: Login.md  ProtectedRoute.jsx
ReactApp/src/components/SystemComponents/Utils/: widgetProps.jsx
ReactApp/src/components/UI/: MainDashboard.jsx
alarmHandlerDbInit/: pyproject.toml
alarmHandlerServer/src/python/: pyproject.toml
docker/adminDbInit/: Dockerfile
docker/alarmHandlerDbInit/: Dockerfile
docker/alarmHandlerServer/: Dockerfile
docker/demoioc/: Dockerfile
docker/epicsBase/: Dockerfile
docker/frontend/: Dockerfile
docker/frontendserverDev/: Dockerfile
docker/loadSaveDbInit/: Dockerfile
docker/mongoSetup/: Dockerfile
docker/node_cache/: Dockerfile
docker/pvserver/: Dockerfile
docker/signalcli/: Dockerfile
docker/storybook/: Dockerfile
docker/storybookServerDev/: Dockerfile
docs/: migrate-from-V7-to-V8.md
mongoSetup/: pyproject.toml  replSetup.py
nginx/: nginx.dev.conf
pvServer/: pvServer.py  pyproject.toml
pvServer/test/: auth_structs.py  test_authenticate.py
pvServer/userAuthentication/: authenticate.py  authenticator.py  pvAccess.py  userAuth.py  usersJsonAuthenticator.py
(+1 files in other folders)
