[project]
name = "pvserver"
version = "7.0.0"
description = "RAS Python backend. It mainly manages connections with PVs, through a websocket connection, authentication, authorization, plus other optional functionalities."
authors = [{ name = "React Automation Studio Team https://github.com/React-Automation-Studio/React-Automation-Studio/discussions" }]
requires-python = "==3.12.7"
readme = "README.md"
license = "MIT"
dependencies = [
    "Flask==3.1.0",
    "Flask-Cors==5.0.0",
    "Flask-SocketIO==5.5.1",
    "PyJWT==2.10.1",
    "Werkzeug==3.1.3",
    "bcrypt==4.2.1",
    "gevent==24.11.1",
    "gevent-websocket==0.10.1",
    "google-api-python-client==2.161.0",
    "pyepics==3.5.7",
    "pymongo==4.11.1",
    "python-dotenv==1.0.1",
    "python-ldap==3.4.4",
    "numpy==2.2.3",
]

[project.urls]
Repository = "https://github.com/React-Automation-Studio/React-Automation-Studio"

[dependency-groups]
dev = [
    "black==25.1.0",
    "pytest==8.3.4",
]
