[project]
name = "pvserver"
version = "8.0.0"
description = "RAS Python backend. It mainly manages connections with PVs, through a websocket connection, authentication, authorization, plus other optional functionalities."
authors = [{ name = "React Automation Studio Team https://github.com/React-Automation-Studio/React-Automation-Studio/discussions" }]
requires-python = "==3.13.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "Flask==3.1.2",
    "Flask-Cors==6.0.2",
    "Flask-SocketIO==5.6.0",
    "PyJWT==2.10.1",
    "Werkzeug==3.1.4",
    "bcrypt==5.0.0",
    "gevent==25.9.1",
    "gevent-websocket==0.10.1",
    "google-api-python-client==2.187.0",
    "pyepics==3.5.9",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "python-ldap==3.4.5",
    "numpy==2.4.0",
]

[project.urls]
Repository = "https://github.com/React-Automation-Studio/React-Automation-Studio"

[dependency-groups]
dev = [
    "black==25.1.0",
    "pytest==8.3.4",
]
